# BoostSharedMemoryTemplate

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  client.cpp  main.cpp
examples/python/: MemoryManager.py  client.py  test.py
include/BoostSharedMemoryTemplate/: SharedMemory.hpp  SharedMemory.tpp
