CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(BOOST_SHARED_MEMORY_TEMPLATE)

SET(BOOST_SHARED_MEMORY_TEMPLATE_VERSION_MAJOR 1)
SET(BOOST_SHARED_MEMORY_TEMPLATE_VERSION_MINOR 0)

INCLUDE_DIRECTORIES(include)

SET(BOOST_SHARED_MEMORY_TEMPLATE_INCLUDE "include/BoostSharedMemoryTemplate")

FIND_PACKAGE(Boost)
IF(NOT Boost_FOUND)
    message( FATAL_ERROR "Boost libarary Not Found!!!!")
ENDIF()

FIND_PACKAGE(Boost 1.58.0 REQUIRED COMPONENTS system thread regex)

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

FILE(WRITE cmake/FindBoostSharedMemoryTemplate.cmake
    "set(BOOST_SHARED_MEMORY_TEMPLATE_INCLUDE_DIRS
         ${Boost_INCLUDE_DIRS}
         ${CMAKE_INSTALL_PREFIX}/include)

    set(BOOST_SHARED_MEMORY_TEMPLATE_FOUND TRUE)")

INSTALL(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_INSTALL_PREFIX}/include/BoostSharedMemoryTemplate)")
INSTALL(FILES 
        "${BOOST_SHARED_MEMORY_TEMPLATE_INCLUDE}/SharedMemory.hpp"
        "${BOOST_SHARED_MEMORY_TEMPLATE_INCLUDE}/SharedMemory.tpp"
        DESTINATION ${CMAKE_INSTALL_PREFIX}/include/BoostSharedMemoryTemplate)
INSTALL(FILES cmake/FindBoostSharedMemoryTemplate.cmake DESTINATION ${CMAKE_ROOT}/Modules)

