CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(SHARED_MEMORY_EXAMPLE)

SET(SHARED_MEMORY_EXAMPLE_VERSION_MAJOR 1)
SET(SHARED_MEMORY_EXAMPLE_VERSION_MINOR 0)

FIND_PACKAGE(Eigen3)

FIND_PACKAGE(Boost)
IF(NOT Boost_FOUND)
    message( FATAL_ERROR "Boost libarary Not Found!!!!")
ENDIF()

FIND_PACKAGE(Boost 1.58.0 REQUIRED COMPONENTS system thread regex)

FIND_PACKAGE(BoostSharedMemoryTemplate)

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
IF(BOOST_SHARED_MEMORY_TEMPLATE_FOUND)
    INCLUDE_DIRECTORIES("${BOOST_SHARED_MEMORY_TEMPLATE_INCLUDE_DIRS}")
ENDIF()
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

ADD_EXECUTABLE(example main.cpp)
TARGET_LINK_LIBRARIES(example -lrt ${Boost_LIBRARIES} Eigen3::Eigen)

ADD_EXECUTABLE(client client.cpp)
TARGET_LINK_LIBRARIES(client -lrt ${Boost_LIBRARIES} Eigen3::Eigen)